k8s/zamazon/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zamazon-ingress
  namespace: zamazon
spec:
  rules:
    - host: api.zamazon.local  # Update this with your local domain (map it via /etc/hosts)
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 80
          - path: /buyer
            pathType: Prefix
            backend:
              service:
                name: transactions-service
                port:
                  number: 80
